--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ nodejs/node_modules/
 client-server/node_modules/
 projeto-dropbox-curso-JS/node_modules
 projeto-dropbox-curso-JS/app/upload
+projeto-whatsapp-curso-JS/node_modules
 
