W25 - Configurando o Firebase no projeto, Created class to configure Firebase

--- a/projeto-whatsapp-curso-JS/package.json
+++ b/projeto-whatsapp-curso-JS/package.json
@@ -10,9 +10,13 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "webpack": "~3.1.0",
+    "webpack-dev-server": "~2.5.1",
+    "worker-loader": "~1.1.1"
+  },
   "dependencies": {
-    "pdfjs-dist": "^2.0.489",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "firebase": "~4.13.1",
+    "pdfjs-dist": "~2.0.489"
   }
 }
