MY24 - Administração do Menu - Enviando Novo Menu via POST, Created method to register new menus in MySQL

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ projeto-dropbox-curso-JS/app/upload
 projeto-whatsapp-curso-JS/node_modules
 projeto-restaurante-curso-JS/saboroso/node_modules
 projeto-restaurante-curso-JS/saboroso/public/admin/bower_components
+projeto-restaurante-curso-JS/saboroso/public/images
